--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@types/node": "20.11.24",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
+    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/sdk-core": "^4.1.4",
+    "@uniswap/v2-sdk": "^4.2.1",
+    "@uniswap/widgets": "^2.59.0",
     "autoprefixer": "10.4.18",
+    "encoding": "^0.1.13",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.2",
+    "ethers": "^5.7.1",
     "next": "14.1.2",
     "postcss": "8.4.35",
     "react": "18.2.0",
